tests/baselines/reference/binaryArithmatic2.errors.txt
tests/cases/compiler/binaryArithmatic2.ts(1,13): error TS18047: 'undefined' is possibly 'undefined'.


==== tests/cases/compiler/binaryArithmatic2.ts (1 errors) ====
    var v = 4 | undefined;
                ~~~~~~~~~
!!! error TS18047: 'undefined' is possibly 'undefined'.